--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,14 @@ dependencies:
   flutter_secure_storage: ^4.2.1
   jwt_decoder: ^2.0.1
   flutter_dotenv: ^5.0.2
+  mobx: ^2.0.4
+  flutter_mobx: ^2.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: 
+  mobx_codegen: ^2.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
