--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   mobx: ^2.0.4
   flutter_mobx: ^2.0.2
+  charts_flutter: ^0.11.0
 
 dev_dependencies:
   flutter_test:
