--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   mobx: ^2.0.4
   flutter_mobx: ^2.0.2
   charts_flutter: ^0.11.0
+  loading_indicator: ^3.0.2
 
 dev_dependencies:
   flutter_test:
