--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_mobx: ^2.0.2
   charts_flutter: ^0.11.0
   loading_indicator: ^3.0.2
+  settings_ui: ^1.0.0
 
 dev_dependencies:
   flutter_test:
