--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   charts_flutter: ^0.11.0
   loading_indicator: ^3.0.2
   settings_ui: ^1.0.0
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
