--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -30,7 +30,6 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_login: ^2.2.1
   http: ^0.13.3
-  flutter_secure_storage: ^4.2.1
   jwt_decoder: ^2.0.1
   flutter_dotenv: ^5.0.2
   mobx: ^2.0.4
@@ -40,11 +39,12 @@ dependencies:
   settings_ui: ^1.0.0
   provider: ^5.0.0
   tuple: ^2.0.0
-  
+  shared_preferences: ^2.0.7
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: 
+  build_runner:
   mobx_codegen: ^2.0.2
 
 # For information on the generic Dart part of this file, see the
@@ -52,7 +52,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -90,6 +89,6 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
   fonts:
-   - family:  CustomIcons
-     fonts:
-      - asset: lib\fonts\CustomIcons.ttf
+    - family: CustomIcons
+      fonts:
+        - asset: lib\fonts\CustomIcons.ttf
