--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,11 @@ dependencies:
   tuple: ^2.0.0
   mobx_codegen: ^2.0.7
   shared_preferences: ^2.0.15
+  flutter_native_splash: ^2.2.9
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/images/dano-scaled.png
 
 dev_dependencies:
   flutter_test:
