--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   mobx_codegen: ^2.0.7
   shared_preferences: ^2.0.15
   flutter_native_splash: ^2.2.9
+  qr_flutter: ^4.0.0
 
 flutter_native_splash:
   color: "#ffffff"
