--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.3
   flutter_login: ^3.2.0
-  charts_flutter: ^0.12.0
   json_serializable: ^6.2.0
   http: ^0.13.4
   jwt_decoder: ^2.0.1
@@ -50,6 +49,7 @@ dependencies:
   flutter_native_splash: ^2.2.9
   qr_flutter: ^4.0.0
   majascan: ^0.5.0
+  community_charts_flutter: ^1.0.0
 
 flutter_native_splash:
   color: "#ffffff"
