--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   jwt_decode: ^0.3.1
   ntp: ^2.0.0
   http_interceptor: ^1.0.2
+  dio: ^5.1.0
 
 flutter_native_splash:
   color: "#ffffff"
