--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,8 @@
     {
       "name": "foosball_mobile_app",
       "request": "launch",
-      "type": "dart",
-      "args": ["-d", "chrome", "--web-port", "8000"]
+      "type": "dart"
+      // "args": ["-d", "chrome", "--web-port", "8000"]
     },
     {
       "name": "foosball_mobile_app (profile mode)",
