--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,13 @@ dependencies:
   shared_preferences: ^2.3.1
   flutter_native_splash: ^2.4.1
   qr_flutter: ^4.1.0
-  majascan: ^0.5.0
   community_charts_flutter: ^1.0.4
   flutter_keyboard_visibility: ^6.0.0
   jwt_decode: ^0.3.1
   ntp: ^2.0.0
   dio: ^5.5.0+1
   flutter_launcher_icons: ^0.13.1
+  mobile_scanner: ^5.1.1
 
 dev_dependencies:
   flutter_test:
