--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   dio: ^5.5.0+1
   flutter_launcher_icons: ^0.13.1
   mobile_scanner: ^5.1.1
+  signalr_netcore: ^1.3.9
 
 dev_dependencies:
   flutter_test:
