--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   mobile_scanner: ^5.1.1
   signalr_netcore: ^1.3.9
+  web_socket_channel: ^3.0.2
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +62,8 @@ flutter:
   assets:
     - .env
     - assets/images/dano-scaled.png
+    - assets/images/player_one_transparent.png
+    - assets/images/player_two_transparent.png
   fonts:
     - family: CustomIcons
       fonts:
