--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   mobile_scanner: ^5.1.1
   signalr_netcore: ^1.3.9
   web_socket_channel: ^3.0.2
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
