--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  google_sign_in: ^7.1.1
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
