🎨 Update AndroidManifest.xml, foosball_player.png, TokenHelper.dart, and 6 more files

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,6 +102,7 @@ flutter:
     - assets/images/dano-scaled.png
     - assets/images/player_one_transparent.png
     - assets/images/player_two_transparent.png
+    - assets/images/foosball_player.png
   fonts:
     - family: CustomIcons
       fonts:
